--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+server.port=8080
+spring.application.name=online-bookstore-service
+
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.h2.console.enabled=true
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+logging.level.org.hibernate.SQL=debug
+spring.jpa.generate-ddl=true
+spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=update
 
